src/objects/Product_Key_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_Compass_ID__c</fullName>
        <label>Account Compass ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Key Requests</relationshipLabel>
        <relationshipName>Product_Key_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bypass_CPU_Checking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass CPU Checking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cats_Id__c</fullName>
        <description>This is an auto-populated field for key generation to store CatsId for activation site</description>
        <label>Cats Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudBI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CloudBI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSIID__c</fullName>
        <label>DSIID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSI</label>
        <referenceTo>DSI__c</referenceTo>
        <relationshipLabel>Product Key Requests</relationshipLabel>
        <relationshipName>Product_Key_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Disable_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Key__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employee Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <label>Employee Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Existing_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field that indicates that this key request can be full filled with an existing Key Request.</description>
        <label>Existing Request</label>
        <referenceTo>Product_Key_Request__c</referenceTo>
        <relationshipLabel>Product Key Requests</relationshipLabel>
        <relationshipName>Product_Key_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JSON_Payload__c</fullName>
        <label>JSON Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Shipped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Shipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LockedKey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Key__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Map_To_Previous_SKU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Map To Previous SKU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Key_Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Key Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Max_End_Date__c</fullName>
        <formula>Opportunity__r.Max_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Max End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Min_Start_Date__c</fullName>
        <formula>Opportunity__r.Min_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Min Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Term__c</fullName>
        <formula>Opportunity__r.Term_Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Product Key Requests</relationshipLabel>
        <relationshipName>Keys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuoteID__c</fullName>
        <label>QuoteID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuoteNumber__c</fullName>
        <formula>TEXT(QuoteID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Account_Name__c</fullName>
        <label>Ship Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Contact_Account__c</fullName>
        <formula>Ship_Contact__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship Contact Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Contact_Email__c</fullName>
        <label>Ship Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ship_Contact_Name__c</fullName>
        <label>Ship Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Product Key Requests</relationshipLabel>
        <relationshipName>Product_Key_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <defaultValue>&quot;Product Key&quot;</defaultValue>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ESRI Key</fullName>
                </value>
                <value>
                    <fullName>Mapbox Key</fullName>
                </value>
                <value>
                    <fullName>Product Key</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version_ID_T__c</fullName>
        <label>Version ID T</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_ID__c</fullName>
        <label>Version ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version_List__c</fullName>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Version</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <formula>104</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isAWS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAWS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isAuditingDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auditing Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUniversal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isUniversal</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Key Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DSI__c</columns>
        <columns>JSON_Payload__c</columns>
        <columns>Error__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>Ship_Contact_Email__c</columns>
        <columns>Version_List__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee_Key__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>KR-{000000}</displayFormat>
        <label>Product Key Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Key Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>